//
//  AlertPresenter.swift
//  MovieQuiz
//
//  Created by Леонид Лебедев on 08.12.2025.
//

import UIKit

final class AlertPresenter {
    static func show(in vc: UIViewController, model: AlertModel) {
        let alert = UIAlertController(
            title: model.title,
            message: model.message,
            preferredStyle: .alert)
        
        alert.view.accessibilityIdentifier = "gameResultsAlert"
        
        let action = UIAlertAction(title: model.buttonText, style: .default) { _ in
            model.completion()
        }
        
        alert.addAction(action)
        
        vc.present(alert, animated: true, completion: nil)
    }
}
