...
        if isLastQuestion() {
            let text = correctAnswers == questionsAmount
            ? "Поздравляем, вы ответили на 10 из 10!"
            : "Вы ответили на \(correctAnswers) из 10, попробуйте ещё раз!"
            
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: text,
                buttonText: "Сыграть еще раз"
            )
            
            viewController?.show(quiz: viewModel)
        } else {
...
